syntax = "proto3";
package Artemis.Shared.Identity.Services;
import "google/protobuf/timestamp.proto";

message AddUserClaimRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   UserClaimPackage ClaimPackage = 2;
}
message AddUserClaimsRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated UserClaimPackage ClaimPackages = 2;
}
message AddUserLoginRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   UserLoginPackage UserLoginPackage = 2;
}
message AddUserRoleRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string RoleId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message AddUserRolesRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated string RoleIds = 2;
}
message AddUserTokenRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   UserTokenPackage UserTokenPackage = 2;
}
message CreateUserRequest {
   string UserName = 1;
   string Password = 2;
   string Email = 3;
   string PhoneNumber = 4;
}
message CreateUsersRequest {
   repeated KeyValuePair_UserPackage_String UserPackages = 1;
}
message DeleteUserRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message DeleteUsersRequest {
   repeated string UserIds = 1;
}
message EmptyRecord {
}
message FetchUserClaimsFilter {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string ClaimTypeSearch = 2;
}
message FetchUserClaimsRequest {
   int32 Page = 1;
   int32 Size = 2;
   FetchUserClaimsFilter Filter = 3;
}
message FetchUserLoginsFilter {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string LoginProviderSearch = 2;
}
message FetchUserLoginsRequest {
   int32 Page = 1;
   int32 Size = 2;
   FetchUserLoginsFilter Filter = 3;
}
message FetchUserRolesFilter {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string RoleNameSearch = 2;
}
message FetchUserRolesRequest {
   int32 Page = 1;
   int32 Size = 2;
   FetchUserRolesFilter Filter = 3;
}
message FetchUserTokensFilter {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string LoginProviderSearch = 2;
   string NameSearch = 3;
}
message FetchUserTokensRequest {
   int32 Page = 1;
   int32 Size = 2;
   FetchUserTokensFilter Filter = 3;
}
message FetchUsersFilter {
   string NameSearch = 1;
   string EmailSearch = 2;
   string PhoneNumberSearch = 3;
}
message FetchUsersRequest {
   int32 Page = 1;
   int32 Size = 2;
   FetchUsersFilter Filter = 3;
}
message GetUserClaimRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserClaimId = 2;
}
message GetUserLoginRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserLoginId = 2;
}
message GetUserRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message GetUserRoleRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string RoleId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message GetUserTokenRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserTokenId = 2;
}
message GrpcEmptyResponse {
   GrpcResult Result = 1;
   EmptyRecord Data = 2;
}
message GrpcPageResult {
   int32 Page = 1;
   int32 Size = 2;
   int64 Count = 3;
   int64 Total = 4;
}
message GrpcResult {
   int32 Code = 1;
   bool Succeeded = 2;
   string Message = 3;
   string Error = 4;
   .google.protobuf.Timestamp DateTime = 5;
   int64 Timestamp = 6;
}
message KeyValuePair_UserPackage_String {
   UserPackage Key = 1;
   string Value = 2;
}
message RemoveUserClaimRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserClaimId = 2;
}
message RemoveUserClaimsRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated int32 UserClaimIds = 2 [packed = false];
}
message RemoveUserLoginRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserLoginId = 2;
}
message RemoveUserLoginsRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated int32 UserLoginIds = 2 [packed = false];
}
message RemoveUserRoleRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string RoleId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message RemoveUserRolesRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated string RoleIds = 2;
}
message RemoveUserTokenRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserTokenId = 2;
}
message RemoveUserTokensRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated int32 UserTokenIds = 2 [packed = false];
}
message ReplaceUserLoginRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserLoginId = 2;
   UserLoginPackage UserLoginPackage = 3;
}
message ReplaceUserTokenRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   int32 UserTokenId = 2;
   UserTokenPackage UserTokenPackage = 3;
}
message RoleInfo {
   string Id = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string Name = 2;
   string Description = 3;
}
message UpdateUserRequest {
   string UserId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   UserPackage UserPackage = 2;
}
message UpdateUsersRequest {
   map<string,UserPackage> UserPackages = 1;
}
message UserClaimInfo {
   int32 Id = 1;
   string UserId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string ClaimType = 3;
   string ClaimValue = 4;
   string CheckStamp = 5;
   string Description = 6;
}
message UserClaimPackage {
   string ClaimType = 1;
   string ClaimValue = 2;
   string CheckStamp = 3;
   string Description = 4;
}
message UserClaimResponse {
   GrpcResult Result = 1;
   UserClaimInfo Data = 2;
}
message UserClaimsResponse {
   GrpcResult Result = 1;
   GrpcPageResult Page = 2;
   repeated UserClaimInfo Data = 3;
}
message UserInfo {
   string Id = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string UserName = 2;
   string Email = 3;
   bool EmailConfirmed = 4;
   string PhoneNumber = 5;
   bool PhoneNumberConfirmed = 6;
}
message UserLoginInfo {
   int32 Id = 1;
   string UserId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string LoginProvider = 3;
   string ProviderKey = 4;
   string ProviderDisplayName = 5;
}
message UserLoginPackage {
   string LoginProvider = 1;
   string ProviderKey = 2;
   string ProviderDisplayName = 3;
}
message UserLoginResponse {
   GrpcResult Result = 1;
   UserLoginInfo Data = 2;
}
message UserLoginsResponse {
   GrpcResult Result = 1;
   GrpcPageResult Page = 2;
   repeated UserLoginInfo Data = 3;
}
message UserPackage {
   string UserName = 1;
   string Email = 2;
   string PhoneNumber = 3;
}
message UserResponse {
   GrpcResult Result = 1;
   UserInfo Data = 2;
}
message UserRoleResponse {
   GrpcResult Result = 1;
   RoleInfo Data = 2;
}
message UserRolesResponse {
   GrpcResult Result = 1;
   GrpcPageResult Page = 2;
   repeated RoleInfo Data = 3;
}
message UserTokenInfo {
   int32 Id = 1;
   string UserId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string LoginProvider = 3;
   string Name = 4;
   string Value = 5;
}
message UserTokenPackage {
   string LoginProvider = 1;
   string Name = 2;
   string Value = 3;
}
message UserTokenResponse {
   GrpcResult Result = 1;
   UserTokenInfo Data = 2;
}
message UserTokensResponse {
   GrpcResult Result = 1;
   GrpcPageResult Page = 2;
   repeated UserTokenInfo Data = 3;
}
message UsersResponse {
   GrpcResult Result = 1;
   GrpcPageResult Page = 2;
   repeated UserInfo Data = 3;
}
service UserService {
   rpc AddUserClaim (AddUserClaimRequest) returns (GrpcEmptyResponse);
   rpc AddUserClaims (AddUserClaimsRequest) returns (GrpcEmptyResponse);
   rpc AddUserLogin (AddUserLoginRequest) returns (GrpcEmptyResponse);
   rpc AddUserRole (AddUserRoleRequest) returns (GrpcEmptyResponse);
   rpc AddUserRoles (AddUserRolesRequest) returns (GrpcEmptyResponse);
   rpc AddUserToken (AddUserTokenRequest) returns (GrpcEmptyResponse);
   rpc CreateUser (CreateUserRequest) returns (UserResponse);
   rpc CreateUsers (CreateUsersRequest) returns (GrpcEmptyResponse);
   rpc DeleteUser (DeleteUserRequest) returns (GrpcEmptyResponse);
   rpc DeleteUsers (DeleteUsersRequest) returns (GrpcEmptyResponse);
   rpc FetchUserClaims (FetchUserClaimsRequest) returns (UserClaimsResponse);
   rpc FetchUserLogins (FetchUserLoginsRequest) returns (UserLoginsResponse);
   rpc FetchUserRoles (FetchUserRolesRequest) returns (UserRolesResponse);
   rpc FetchUsers (FetchUsersRequest) returns (UsersResponse);
   rpc FetchUserTokens (FetchUserTokensRequest) returns (UserTokensResponse);
   rpc GetUser (GetUserRequest) returns (UserResponse);
   rpc GetUserClaim (GetUserClaimRequest) returns (UserClaimResponse);
   rpc GetUserLogin (GetUserLoginRequest) returns (UserLoginResponse);
   rpc GetUserRole (GetUserRoleRequest) returns (UserRoleResponse);
   rpc GetUserToken (GetUserTokenRequest) returns (UserTokenResponse);
   rpc RemoveUserClaim (RemoveUserClaimRequest) returns (GrpcEmptyResponse);
   rpc RemoveUserLogin (RemoveUserLoginRequest) returns (GrpcEmptyResponse);
   rpc RemoveUserLogins (RemoveUserLoginsRequest) returns (GrpcEmptyResponse);
   rpc RemoveUserRole (RemoveUserRoleRequest) returns (GrpcEmptyResponse);
   rpc RemoveUserRoles (RemoveUserRolesRequest) returns (GrpcEmptyResponse);
   rpc RemoveUsersClaim (RemoveUserClaimsRequest) returns (GrpcEmptyResponse);
   rpc RemoveUserToken (RemoveUserTokenRequest) returns (GrpcEmptyResponse);
   rpc RemoveUserTokens (RemoveUserTokensRequest) returns (GrpcEmptyResponse);
   rpc ReplaceUserLogin (ReplaceUserLoginRequest) returns (GrpcEmptyResponse);
   rpc ReplaceUserToken (ReplaceUserTokenRequest) returns (GrpcEmptyResponse);
   rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
   rpc UpdateUsers (UpdateUsersRequest) returns (GrpcEmptyResponse);
}
